chore(xmrig): fix version
Signed-off-by: Kjeld Schouten <info@kjeldschouten.nl>

--- a/charts/stable/xmrig/values.yaml
+++ b/charts/stable/xmrig/values.yaml
@@ -1,7 +1,7 @@
 image:
   pullPolicy: IfNotPresent
   repository: cooleye72/xmrig
-  tag: 6.21.0@sha256:5ad4b674874a4024462d320a823b7f361129875f2d8616e4e1bb26e8169f5409
+  tag: "6.21"
 persistence: {}
 portal:
   open:
