chore(shaarli): fix version
Signed-off-by: Kjeld Schouten <info@kjeldschouten.nl>

--- a/charts/stable/shaarli/values.yaml
+++ b/charts/stable/shaarli/values.yaml
@@ -1,7 +1,7 @@
 image:
   pullPolicy: IfNotPresent
   repository: shaarli/shaarli
-  tag: master@sha256:9580433c9efb1ed356cc98c0876ecf76d1bc21654b535a6aa90e4bf74abadd02
+  tag: v0.13.0
 persistence:
   cache:
     enabled: true
