--- a/charts/stable/remotely/values.yaml
+++ b/charts/stable/remotely/values.yaml
@@ -1,7 +1,7 @@
 image:
   pullPolicy: IfNotPresent
   repository: immybot/remotely
-  tag: 1380@sha256:fcb066c1e3941711b57a7cc346b53b6602b3305dccbb59afa6446db0baeddfe2
+  tag: latest
 persistence:
   data:
     enabled: true
