--- a/charts/stable/promcord/values.yaml
+++ b/charts/stable/promcord/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: biospheere/promcord
-  tag: latest@sha256:16d4fd269e665890d92e8ab2bf64f6cdd6f8bd45f27e829d414c4bad447c4974
+  tag: latest
   pullPolicy: IfNotPresent
 service:
   main:
