loose meshroom versioning

--- a/.github/renovate/special/customVersioning.json5
+++ b/.github/renovate/special/customVersioning.json5
@@ -4,7 +4,7 @@
     {
       "description": ["Loose versioning for non-semver packages"],
       "matchDatasources": ["docker"],
-      "matchPackagePatterns": ["cross-seed", "plex"],
+      "matchPackagePatterns": ["cross-seed", "plex", "alicevision/meshroom", "meshroom"],
       "versioning": "loose"
     },
     {
