--- a/.github/renovate/kinds/flux.json5
+++ b/.github/renovate/kinds/flux.json5
@@ -11,6 +11,6 @@
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
     "semanticCommitScope": "flux",
     "pinDigests": false, // Set to false to not pin digest references
-    "branchPrefix": "flux-",
+    "branchPrefix": "renovate/flux-",
   },
 }
