--- a/.github/renovate/kinds/go.json5
+++ b/.github/renovate/kinds/go.json5
@@ -9,7 +9,7 @@
     "enabled": true, // Enable Go module updates
     "updateTypes": ["major", "minor", "patch",  "digest", "pin", "lockfile"], // Allow updates for all version types
     "semanticCommitScope": "go",
-  "branchPrefix": "go-",
+  "branchPrefix": "renovate/go-",
   },
 
 }
