--- a/.github/renovate/kinds/helm-values.json5
+++ b/.github/renovate/kinds/helm-values.json5
@@ -12,7 +12,7 @@
     "updateTypes": ["major", "minor", "patch", "digest", "pin"], // Allow updates for all version types
     "semanticCommitScope": "helm",
     "bumpVersion": true,
-    "branchPrefix": "helm-values-",      // Moved to helm-values scope
+    "branchPrefix": "renovate/helm-values-",      // Moved to helm-values scope
   }
 
 }
