--- a/.github/renovate/kinds/helm.json5
+++ b/.github/renovate/kinds/helm.json5
@@ -11,7 +11,7 @@
     "bumpVersion": true,
     "updateTypes": ["major", "minor", "patch"], // Allow updates for all version types
     "pinDigests": false, // Set to false to not pin digest references
-    "branchPrefix": "helm-",
+    "branchPrefix": "renovate/helm-",
   },
 
 }
