--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -4,6 +4,7 @@
   "prConcurrentLimit": 150,
   "automergeType": "pr",
   "pinDigests": true,
+  "branchPrefix": "renovate/",
     "semanticCommits": "enabled",
   "dependencyDashboard": true,
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
