--- a/.github/renovate/kinds/docker.json5
+++ b/.github/renovate/kinds/docker.json5
@@ -12,7 +12,7 @@
       // "(^|/)repositories/.+\\.ya?ml$",
       // "(^|/)clustertool/embeded/.+\\.ya?ml$"
     ],
-    "branchPrefix": "docker-",
+    "branchPrefix": "renovate/docker-",
     "enabled": true, // Enable Docker image updates
     "updateTypes": ["major", "minor", "patch", "digest", "pin"], // Allow updates for all version types
     "semanticCommitScope": "container",
