--- a/.github/renovate/kinds/githubactions.json5
+++ b/.github/renovate/kinds/githubactions.json5
@@ -9,7 +9,7 @@
     "enabled": true, // Enable GitHub Actions updates
     "updateTypes": ["major", "minor", "patch", "digest", "pin"], // Allow updates for all version types
     "semanticCommitScope": "github-action",
-  "branchPrefix": "githubactions-",
+  "branchPrefix": "renovate/githubactions-",
   },
 
 }
