--- a/charts/stable/meshroom/values.yaml
+++ b/charts/stable/meshroom/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: alicevision/meshroom
-  tag: version-2021.1.0-av2.4.0-centos7-cuda10.2@sha256:1cadc1a8f5edd8ebbf8de20df5cf1d6e44ee0aad4ebbb8939018fe0beadc2dad
+  tag: version-2021.1.0-av2.4.0-centos7-cuda10.2
   pullPolicy: IfNotPresent
 service:
   main:
