fix some docker container build pipelines

--- a/containers/apps/ombi/Dockerfile
+++ b/containers/apps/ombi/Dockerfile
@@ -42,7 +42,7 @@ USER apps
 
 EXPOSE 3579
 
-COPY ./apps/ombi/entrypoint.sh /entrypoint.sh
+COPY ./containers/apps/ombi/entrypoint.sh /entrypoint.sh
 CMD ["/entrypoint.sh"]
 
 LABEL "maintainer"="TrueCharts <info@truecharts.org>"
