--- a/containers/apps/db-wait-postgres/Dockerfile
+++ b/containers/apps/db-wait-postgres/Dockerfile
@@ -1,36 +1,25 @@
 # hadolint ignore=DL3007
-FROM ghcr.io/truecharts/ubuntu:latest@sha256:cbe66cbca1ddd2a82093675067c363af8bbc6713b645bc77cb1706578a01facd
+FROM alpine:latest
 
 ARG TARGETPLATFORM
 ARG VERSION
 
 USER root
 
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+SHELL ["/bin/sh", "-o", "pipefail", "-c"]
 
 # hadolint ignore=DL3008,DL3015,SC2086,SC2155
 RUN \
-  apt-get -qq update \
-  && \
-  apt-get -qq install -y \
-    postgresql-client \
-  && \
+  apk --no-cache update && \
+  apk --no-cache add \
+    postgresql-client && \
   case "${TARGETPLATFORM}" in \
     'linux/amd64') export ARCH='linux-x64' ;; \
-  esac \
-  && apt-get remove -y \
-    jq \
-  && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
-  && apt-get autoremove -y \
-  && apt-get clean \
-  && \
-  rm -rf \
-    /tmp/* \
-    /var/lib/apt/lists/* \
-    /var/tmp/ \
-  && chmod -R u=rwX,go=rX /app \
-  && printf "umask %d" "${UMASK}" >> /etc/bash.bashrc \
-  && update-ca-certificates
+  esac && \
+  apk del --no-cache jq && \
+  rm -rf /var/cache/apk/* /tmp/* /var/tmp/* && \
+  chmod -R u=rwX,go=rX /app && \
+  printf "umask %d" "${UMASK}" >> /etc/profile
 
 USER apps
 
