--- a/containers/apps/db-wait-mongodb/Dockerfile
+++ b/containers/apps/db-wait-mongodb/Dockerfile
@@ -10,7 +10,7 @@ SHELL ["/bin/sh", "-o", "pipefail", "-c"]
 
 # hadolint ignore=DL3008,DL3015,SC2086,SC2155,DL4001
 RUN \
-apk update \
+apk update && \
   apk add --no-cache \
     curl \
     ca-certificates \
