--- a/charts/stable/ombi/values.yaml
+++ b/charts/stable/ombi/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: tccr.io/tccr/ombi
+  repository: linuxserver/ombi
   pullPolicy: IfNotPresent
-  tag: v4.43.11@sha256:d4b081323f8094b21dcba866c66887f1deff420857098f5aa50c13f1e097bc9b
+  tag: 4.44.1@sha256:c0542bf1f71cecee33398877b1b23062eabaf0be79a3ff27ebf7e136659ea924
 service:
   main:
     ports:
