--- a/.github/workflows/pr-validate.yaml
+++ b/.github/workflows/pr-validate.yaml
@@ -88,6 +88,7 @@ jobs:
       - charts-test
       - website-and-docs
       - print_head_msg
+      - common-tests
     steps:
       - name: Check Results
         run: |
@@ -96,6 +97,7 @@ jobs:
                 "${{ needs.charts-lint.result }}" != "success" || \
                 "${{ needs.charts-test.result }}" != "success" || \
                 "${{ needs.website-and-docs.result }}" != "success" || \
+                "${{ needs.common-tests.result }}" != "success" || \
                 "${{ needs.print_head_msg.result }}" != "success" ]]; then
             echo "One or more jobs failed!"
             exit 1
