--- a/.github/workflows/containers.build.yaml
+++ b/.github/workflows/containers.build.yaml
@@ -345,11 +345,19 @@ jobs:
         env:
           COSIGN_EXPERIMENTAL: 1
 
+
+  # Summarize matrix https://github.community/t/status-check-for-a-matrix-jobs/127354/7
   container-build-complete:
     needs: [build]
     if: ${{ always() }}
     name: Container Build Completed
     runs-on: ubuntu-latest
     steps:
-      - name: complete message
-        run: echo "Container Build and Tests Completed Successfully"
+      - name: Check Results
+        run: |
+          if [[ "${{ needs.build.result }}" != "success" ]]; then
+            echo "One or more jobs failed!"
+            exit 1
+          else
+            echo "Container Build and Tests Completed Successfully"
+          fi
