--- a/.github/workflows/clustertool.tests.yaml
+++ b/.github/workflows/clustertool.tests.yaml
@@ -2,6 +2,7 @@ name: clustertool-go-tests
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 on:
+  workflow_dispatch:
   # push:
   #   branches:
   #     - main
