--- a/.github/workflows/clustertool.tests.yaml
+++ b/.github/workflows/clustertool.tests.yaml
@@ -3,6 +3,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 on:
   workflow_dispatch:
+  workflow_call:
   push:
     branches:
       - main
