--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -27,31 +27,22 @@ defaults:
 jobs:
   check_changes:
     runs-on: ubuntu-latest
+    outputs:
+      changes_detected: ${{ steps.filter.outputs.changed }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Check for changes in specific folders and README.md files
-        id: check_changes
-        run: |
-          # If this is a pull request, fetch the base branch
-          if [ "${{ github.event_name }}" == "pull_request" ]; then
-            git fetch origin ${{ github.event.pull_request.base.ref }}
-            BASE_COMMIT="origin/${{ github.event.pull_request.base.ref }}"
-          else
-            # For workflow_call, use the default behavior (current commit)
-            BASE_COMMIT="${{ github.sha }}^" # Compare against the previous commit
-          fi
-
-          # Compare changes
-          if git diff --exit-code $BASE_COMMIT...${{ github.sha }} -- website/ **/docs **/README.md; then
-              echo "No changes detected in the specified folders or README.md files."
-              echo "::set-output name=changes_detected::false"
-          else
-              echo "Changes detected in the specified folders or README.md files."
-              echo "::set-output name=changes_detected::true"
-          fi
+      - name: Filter paths
+        id: filter
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3
+        with:
+          list-files: json
+          filters: |
+            changed:
+            - 'website/**'
+            - '**/docs/**'
 
   release-helm:
     permissions:
@@ -59,7 +50,7 @@ jobs:
     name: "${{ github.ref == 'refs/heads/master' && '(Production)' || '(Preview)' }}"
     runs-on: actions-runners
     needs: check_changes
-    if: needs.check_changes.outputs.changes_detected == 'true'
+    if: needs.check_changes.outputs.changes_detected == 'true' 
     steps:
       - name: Checkout
         uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4
