--- a/.github/workflows/clustertool.tests.yaml
+++ b/.github/workflows/clustertool.tests.yaml
@@ -34,21 +34,21 @@ jobs:
 
   check_changes:
     runs-on: ubuntu-latest
+    outputs:
+      changes_detected: ${{ steps.filter.outputs.changed }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Check for changes in specific folder
-        id: check_changes
-        run: |
-          if git diff --exit-code HEAD^ HEAD -- clustertool; then
-            echo "No changes detected in the folder."
-            echo "::set-output name=changes_detected::false"
-          else
-            echo "Changes detected in the folder."
-            echo "::set-output name=changes_detected::true"
-          fi
+      - name: Filter paths
+        id: filter
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3
+        with:
+          list-files: json
+          filters: |
+            changed:
+            - 'clustertool/**'
 
   build:
     runs-on: actions-runners
