--- a/.github/actions/collect-changes/action.yaml
+++ b/.github/actions/collect-changes/action.yaml
@@ -23,6 +23,7 @@ runs:
         filters: |
           addedOrModified:
             - added|modified: 'charts/*/**'
+            - added|modified: '!charts/library/**'
 
     - name: Collect changed charts
       if: |
